test/compile-fail/scope/use-no-root/expected.txt
error: unresolved import `a`
 --> top.rhdl:1:4
  |
1 | use a;
  |     ^ no `a` crate or mod
